--- a/Thema09_EDA.Rmd
+++ b/Thema09_EDA.Rmd
@@ -1,40 +1,25 @@
 ---
-title: "Thema09_Log"
-author: "Marcel Setz"
-output:
-  pdf_document:
-    toc: yes
-    toc_depth: 3
+title: "EDA"
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.width = 12,fig.height = 5, warning = FALSE, message = FALSE)
-options(warn = 0)
-library(ggplot2, quietly = TRUE)
-library(gridExtra, quietly = TRUE)
-library(tidyr, quietly = TRUE)
-library(pander, quietly = TRUE)
-library(ggbiplot, quietly = TRUE)
-library(dplyr, quietly = TRUE)
-library(kableExtra, quietly = TRUE)
-library(tidyverse, quietly = TRUE)
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Week 1 and 2
-## Introduction
-### Smoker epigenetic dataset
+# Introduction
+## Smoker epigenetic dataset
 A CpG island or CpG site is a part of the DNA where the GC content is greater than 50%. In this dataset methylation values of certain CpG sites are displayed with also the age, gender and smoking status for 671 people.
 
-### Research Question
+## Research Question
 Is it possible to identify a person's gender, age or status of smoking given their CpG values?
 
 \newpage
-## EDA
-### Codebook
+# EDA
+## Codebook
 ```{r}
 myData <- read.csv("data/Smoker_Epigenetic_df.csv")
 myData <- myData %>% drop_na()
-write.csv(myData, "data/Smoker_Epigenetic_df.csv")
 
 columns = colnames(myData[1:4])
 columns <- append(columns, "Columns 5-24")
@@ -48,8 +33,8 @@ knitr::kable(codebook)
 ```
 \newpage
 
-### Data exploration
-#### Visualization
+## Data exploration
+### Visualization
 
 ```{r CpG-tables}
 subsetdata <- head(myData)
@@ -112,7 +97,7 @@ ggplot(myData, aes(x=Age)) +
 ```
 
 
-#### Plotting the data
+### Plotting the data
 These are all the CpG sites plotted against age, with smokin status as color groups and gender as shape groups. A few of the CpG islands have been removed, becaused they looked very similar. What stands out here is that you see two groups in almost every graph, one of men and one of women, so apparently the cg methylation rate is different between men and women.
 
 ```{r, results = FALSE}
@@ -163,114 +148,22 @@ ggplot(data = myData, mapping = aes(x = ClassAge, y = cg03706273, fill = Smoking
 
 ```
 
-# Week 3
-## Cleaning Data
+```{r, echo = FALSE}
+myData.pca <- prcomp(myData[,c(5:24)], center = TRUE, scale. = FALSE)
+summary(myData.pca)
+ggbiplot(myData.pca, ellipse = TRUE, circle = TRUE, scale = 0.5, repel = TRUE, groups = myData$Smoking.Status) + 
+  labs(caption = "Figure 4: PCA graph displaying smoking status as different groups") +
+  theme(plot.caption = element_text(size=16, face="italic")) +
+  theme(axis.text = element_text(size = 20)) +
+  theme(axis.title = element_text(size = 20, face="bold")) +
+    theme(legend.text = element_text(size = 16)) +
+    theme(legend.title = element_text(size=16))
 
-Wrote a results section with cleaned and analyzed data and a conclusion/discussion section with the conclusion of the data and research question.
-
-# Week 4
-## Quality metrics
-
-## Algorithms
-ZeroR, OneR, J48, NaiveBayes, IBK, Simple Logistics, SMO, Random Forest
-
-```{r}
-ML_dataLoc <- "data/Smoker_Epigenetic_df_Experiment.csv"
-ML_data <- read.csv(ML_dataLoc)
-ML_ZeroR <- ML_data[c(1:100),]
-ML_OneR <- ML_data[c(101:200),]
-ML_J48 <- ML_data[c(201:300),]
-ML_IBK <- ML_data[c(301:400),]
-ML_NaiveBayes <- ML_data[c(401:500),]
-ML_SimpleLog <- ML_data[c(501:600),]
-ML_SMO <- ML_data[c(601:700),]
-ML_RandomForest <- ML_data[c(701:800),]
-algos <- list(ML_ZeroR, ML_OneR, ML_J48, ML_IBK, ML_NaiveBayes, ML_SimpleLog, ML_SMO, ML_RandomForest)
-ML_ZeroR
-avgs_pc <- list()
-avgs_pi <- list()
-avgs_tp <- list()
-avgs_fp <- list()
-avgs_tn <- list()
-avgs_fn <- list()
-avgs_pr <- list()
-avgs_rc <- list()
-avgs_roc <- list()
-
-for (algo in algos) {
-  percent_correct <- algo[3]
-  avg <- lapply(percent_correct, mean)
-  avgs_pc[[length(avgs_pc) + 1]] <- avg
-}
-for (algo in algos) {
-  percent_incorrect <- algo[4]
-  avg <- lapply(percent_incorrect, mean)
-  avgs_pi[[length(avgs_pi) + 1]] <- avg
-}
-for (algo in algos) {
-  TP <- algo[5]
-  avg <- lapply(TP, sum)
-  avgs_tp[[length(avgs_tp) + 1]] <- avg
-}
-for (algo in algos) {
-  FP <- algo[6]
-  avg <- lapply(FP, sum)
-  avgs_fp[[length(avgs_fp) + 1]] <- avg
-}
-for (algo in algos) {
-  TN <- algo[7]
-  avg <- lapply(TN, sum)
-  avgs_tn[[length(avgs_tn) + 1]] <- avg
-}
-for (algo in algos) {
-  FN <- algo[8]
-  avg <- lapply(FN, sum)
-  avgs_fn[[length(avgs_fn) + 1]] <- avg
-}
-for (algo in algos) {
-  precision <- algo[9]
-  avg <- lapply(precision, mean)
-  avgs_pr[[length(avgs_pr) + 1]] <- avg
-}
-for (algo in algos) {
-  recall <- algo[10]
-  avg <- lapply(recall, mean)
-  avgs_rc[[length(avgs_rc) + 1]] <- avg
-}
-for (algo in algos) {
-  roc_area <- algo[11]
-  avg <- lapply(roc_area, mean)
-  avgs_roc[[length(avgs_roc) + 1]] <- avg
-}
-avgs_df <- data.frame(row.names = c("ZeroR", "OneR", "J48", "IBK", "NaiveBayes", "SimpleLogistics", "SMO", "RandomForest"))
-
-vec_pc <- unlist(avgs_pc)
-vec_pi <- unlist(avgs_pi)
-vec_tp <- unlist(avgs_tp)
-vec_fp <- unlist(avgs_fp)
-vec_tn <- unlist(avgs_tn)
-vec_fn <- unlist(avgs_fn)
-vec_pr <- unlist(avgs_pr)
-vec_rc <- unlist(avgs_rc)
-vec_roc <- unlist(avgs_roc)
-
-avgs_df$percent_correct_avgs <- vec_pc
-avgs_df$percent_incorrect_avgs <- vec_pi
-avgs_df$TP_avgs <- vec_tp
-avgs_df$FP_avgs <- vec_fp
-avgs_df$TN_avgs <- vec_tn
-avgs_df$FN_avgs <- vec_fn
-avgs_df$precision_avgs <- vec_pr
-avgs_df$recall_avgs <- vec_rc
-avgs_df$ROC_Area_avgs <- vec_roc
-
-avgs_df
-write.csv(avgs_df, file = "data/Smoker_Epigenetic_df_Summary.csv")
-
+ggbiplot(myData.pca, ellipse = TRUE, circle = TRUE, scale = 0.5, groups = myData$Gender) + 
+  labs(caption = "Figure 5: PCA graph displaying gender as different groups") +
+  theme(plot.caption = element_text(size=16, face="italic")) +
+  theme(axis.text = element_text(size = 20)) +
+  theme(axis.title = element_text(size = 20, face="bold")) +
+    theme(legend.text = element_text(size = 16)) +
+    theme(legend.title = element_text(size=16))
 ```
-
-
-
-
-
-
